{
    "name": "PlayerInputAll",
    "maps": [
        {
            "name": "PlayerInputs",
            "id": "b5924417-a586-4ee2-8eb9-3e989230e363",
            "actions": [
                {
                    "name": "MoveInputs",
                    "type": "Value",
                    "id": "4a7d565b-58f1-4237-bf1c-315862099668",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "JumpInput",
                    "type": "Button",
                    "id": "223042aa-0c36-4b4e-96d9-0e47bfd96fb0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AttackInputs",
                    "type": "Button",
                    "id": "8ec62d17-8862-4044-8ada-574e0515da02",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "44b0553d-a1ef-48df-be32-69a1d0688f75",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveInputs",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "03ad78dd-591b-4f65-8ecb-b90e737a5229",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard & Mouse",
                    "action": "MoveInputs",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "802f4ccd-0744-4548-a3a5-79d08c3c5716",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard & Mouse",
                    "action": "MoveInputs",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a947f6ae-e2c0-44c3-8bd6-990bfa6f414a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard & Mouse",
                    "action": "MoveInputs",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ea532c6e-ffbf-4d61-8d45-5d6bdaf5eae8",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard & Mouse",
                    "action": "MoveInputs",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e241366b-a996-432f-8f08-f28246479284",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard & Mouse",
                    "action": "JumpInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5c31ae5c-b646-40a2-a2d3-2c0ebf1f8977",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttackInputs",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerUIInputs",
            "id": "2d13f206-538c-4bce-8033-ad491174abc2",
            "actions": [
                {
                    "name": "MenuOpenClose",
                    "type": "Button",
                    "id": "dd9ee31c-ddcf-4378-8b56-7369b9cd97e5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "75bb07c4-79f1-47dc-8b3a-62df5c649de6",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard;Keyboard & Mouse",
                    "action": "MenuOpenClose",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard & Mouse",
            "bindingGroup": "Keyboard & Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}